small css tweaks

--- a/music-quiz/styles/styles.css
+++ b/music-quiz/styles/styles.css
@@ -44,8 +44,8 @@
   border: 1px solid #afc0c0;
   width: 700px;
   margin: auto;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   margin-bottom: 10px;
   background: #fdf6e3;
 }
@@ -69,7 +69,8 @@ b {
 }
 
 h1 {
-  margin: 10px;
+  margin-top: 0px;
+  margin-bottom: 10px;
   font-size: 22px;
   color: #3d4d52;
 }
