--- a/music-quiz/styles/flex-base.css
+++ b/music-quiz/styles/flex-base.css
@@ -6,14 +6,14 @@ html,
 body {
   margin: 0;
   padding: 0;
-  /*font-family: sans-serif;*/
-  font-size: 1.1em;
+  font-size: 16px;
   text-align: center;
   color: #FFF;
-  font: 400 1em/1.4 Open Sans, sans-serif;
+  font-family: -apple-system, 
+    BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, 
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   text-rendering: optimizeLegibility;
   z-index: 1;
-  font-smooth: auto;
 }
 
 .main header,
