--- a/music-quiz/styles/styles.css
+++ b/music-quiz/styles/styles.css
@@ -59,7 +59,6 @@
 #preQuizText {
   position: absolute;
   z-index: 1;
-  /*background: #afada6; MAKE PLAYER 50% OPACITY INSTEAD*/
 }
 
 input:focus::placeholder {
@@ -67,7 +66,7 @@ input:focus::placeholder {
 }
 
 b {
-  color: #3d4d52;
+  color: #586e75;
 }
 
 b-magenta {
@@ -77,8 +76,17 @@ b-magenta {
 
 h1 {
   margin-top: 0px;
-  margin-bottom: 10px;
-  color: #3d4d52;
+  margin-bottom: 5px;
+  color: #586e75;
+}
+
+h2 {
+  font-size: 16px;
+  font-weight: bolder;
+}
+
+p {
+  font-size: 14px;
 }
 
 #setPlaylistButton,
@@ -208,7 +216,8 @@ h1 {
 
 .content-section-title {
   text-align: center;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: normal;
 }
 
 #quiz-status-section {
@@ -248,4 +257,19 @@ h1 {
 
 #custom-start-time-link {
   font-size: 14px;
+}
+
+.troubleshooting {
+  text-align: left;
+}
+
+.troubleshooting h2,
+.troubleshooting p {
+  margin-left: 29px;
+  margin-right: 29px;
+}
+
+.troubleshooting p {
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
